[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "dyn-cc-py"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "kaleido>=1.2.0",
    "maturin>=1.10.2",
    "patchelf>=0.17.2.4",
    "plotly>=6.5.0",
    "raphtory>=0.16.3",
    "scikit-learn>=1.7.2",
    "scikit-network>=0.33.5",
    "scipy>=1.15.3",
]
[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "dyn_cc_py.dyn_cc_py"


